--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "element-ui": "^2.4.11",
     "koa": "^2.6.2",
     "koa-bodyparser": "^4.2.1",
-    "koa-generic-session": "^2.0.1",
     "koa-json": "^2.0.2",
+    "koa-rest-mongoose": "^2.0.3",
     "koa-router": "^7.4.0",
     "mongoose": "^5.4.6",
     "node-sass": "^4.11.0",
