--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "mongoose": "^5.4.6",
     "node-sass": "^4.11.0",
     "nuxt": "^2.3.4",
-    "sass-loader": "^7.1.0"
+    "pug": "^2.0.3",
+    "pug-plain-loader": "^1.0.0",
+    "sass-loader": "^7.1.0",
+    "susy": "^3.0.5"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
