--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
+    "@nuxtjs/device": "^1.2.4",
     "@nuxtjs/pwa": "^3.0.0-0",
     "cross-env": "^5.2.0",
     "koa": "^2.6.2",
-    "nuxt": "^2.0.0",
-    "nuxt-buefy": "^0.3.19"
+    "normalize.css": "^8.0.1",
+    "nuxt": "^2.0.0"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^1.0.1",
