--- a/package.json
+++ b/package.json
@@ -12,6 +12,14 @@
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "test": "jest"
   },
+  "keywords": [
+    "nuxt",
+    "koa",
+    "axios",
+    "prettier",
+    "sass",
+    "eslint"
+  ],
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/component-cache": "^1.1.5",
