feat: mobile 自适应

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "My finest Nuxt.js project",
   "author": "MoonCheung <salvador23@163.com>",
+  "license": "MIT",
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
@@ -23,18 +24,19 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/component-cache": "^1.1.5",
-    "@nuxtjs/device": "^1.2.4",
-    "@nuxtjs/markdownit": "^1.2.7",
     "@nuxtjs/pwa": "^3.0.0-0",
     "@nuxtjs/style-resources": "^1.0.0",
     "@nuxtjs/svg-sprite": "^0.4.5",
     "@nuxtjs/toast": "^3.3.0",
     "cross-env": "^5.2.0",
     "esm": "^3.2.25",
+    "highlight.js": "^9.17.1",
     "koa": "^2.6.2",
+    "markdown-it": "^10.0.0",
     "normalize.css": "^8.0.1",
-    "nuxt": "^2.0.0",
-    "particles.js": "^2.0.0"
+    "nuxt": "^2.10.0",
+    "particles.js": "^2.0.0",
+    "ua-parser-js": "^0.7.21"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^1.0.1",
@@ -47,6 +49,17 @@
     "eslint-plugin-nuxt": ">=0.4.2",
     "eslint-plugin-prettier": "^3.0.1",
     "jest": "^24.1.0",
+    "markdown-it-abbr": "^1.0.4",
+    "markdown-it-deflist": "^2.0.3",
+    "markdown-it-emoji": "^1.4.0",
+    "markdown-it-footnote": "^3.0.2",
+    "markdown-it-images-preview": "^1.0.1",
+    "markdown-it-ins": "^3.0.0",
+    "markdown-it-mark": "^3.0.0",
+    "markdown-it-sub": "^1.0.0",
+    "markdown-it-sup": "^1.0.0",
+    "markdown-it-task-lists": "^2.1.1",
+    "markdown-it-toc": "^1.1.0",
     "node-sass": "^4.13.0",
     "nodemon": "^1.18.9",
     "prettier": "1.19.0",
