--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
     "build": "nuxt build",
     "start": "cross-env NODE_ENV=production node server/index.js",
+    "start:pm2": "pm2 start ecosystem.config.js --env production",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "test": "jest"
@@ -34,7 +35,7 @@
     "koa": "^2.6.2",
     "markdown-it": "^10.0.0",
     "normalize.css": "^8.0.1",
-    "nuxt": "^2.10.0",
+    "nuxt": "^2.10.1",
     "particles.js": "^2.0.0",
     "ua-parser-js": "^0.7.21"
   },
@@ -62,7 +63,7 @@
     "markdown-it-toc": "^1.1.0",
     "node-sass": "^4.13.0",
     "nodemon": "^1.18.9",
-    "prettier": "1.19.0",
+    "prettier": "^1.19.0",
     "sass-loader": "^8.0.0",
     "vue-jest": "^4.0.0-0"
   }
