--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
     "build": "nuxt build",
+    "analyze": "nuxt build --analyze",
     "start": "cross-env NODE_ENV=production node server/index.js",
     "start:pm2": "pm2 start ecosystem.config.js --env production",
     "generate": "nuxt generate",
@@ -31,6 +32,7 @@
     "@nuxtjs/toast": "^3.3.0",
     "cross-env": "^5.2.0",
     "esm": "^3.2.25",
+    "github-markdown-css": "^4.0.0",
     "highlight.js": "^9.17.1",
     "koa": "^2.6.2",
     "markdown-it": "^10.0.0",
