--- a/package.json
+++ b/package.json
@@ -40,15 +40,18 @@
     "normalize.css": "^8.0.1",
     "nuxt": "^2.10.1",
     "particles.js": "^2.0.0",
+    "plyr": "^3.5.10",
     "qrcode-generator": "^1.4.4",
     "ua-parser-js": "^0.7.21"
   },
   "devDependencies": {
+    "@babel/runtime-corejs3": "^7.9.2",
     "@nuxtjs/eslint-config": "^1.0.1",
     "@nuxtjs/eslint-module": "^1.0.0",
     "@vue/test-utils": "^1.0.0-beta.27",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.1.0",
+    "core-js": "3",
     "eslint": "^6.1.0",
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-nuxt": ">=0.4.2",
