--- a/package.json
+++ b/package.json
@@ -35,10 +35,11 @@
     "github-markdown-css": "^4.0.0",
     "highlight.js": "^9.17.1",
     "koa": "^2.6.2",
+    "lozad": "^1.14.0",
     "markdown-it": "^10.0.0",
     "nativeshare": "^2.1.3",
     "normalize.css": "^8.0.1",
-    "nuxt": "^2.10.1",
+    "nuxt": "^2.12.0",
     "particles.js": "^2.0.0",
     "plyr": "^3.5.10",
     "qrcode-generator": "^1.4.4",
