--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "nuxt-blog",
   "version": "1.2.2",
   "description": "My finest Nuxt.js project",
-  "author": "MoonCheung <salvador23@163.com>",
+  "author": {
+    "name": "MoonCheung",
+    "email": "salvador23@163.com",
+    "url": "https://ikmoons.com"
+  },
   "license": "MIT",
   "private": true,
   "scripts": {
