--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
     "plyr": "^3.5.10",
     "qrcode-generator": "^1.4.4",
     "ua-parser-js": "^0.7.21",
-    "vue-gtag": "^1.6.2"
+    "vue-google-adsense": "^1.8.1",
+    "vue-gtag": "^1.6.2",
+    "vue-script2": "^2.1.0"
   },
   "devDependencies": {
     "@babel/runtime-corejs3": "^7.9.2",
