--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
-  "name": "next-typescript-example",
-  "version": "0.1.0",
+  "name": "ikmoons_cloud",
+  "version": "1.0.0",
+  "author": {
+    "name": "MoonCheung",
+    "email": "ikmoons.is@gmail.com",
+    "url": "https://ikmoons.com"
+  },
+  "license": "MIT",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -8,8 +14,19 @@
     "start": "next start"
   },
   "dependencies": {
+    "@mdx-js/loader": "^1.6.22",
+    "@next/mdx": "^10.2.0",
     "next": "10.2.0",
+    "next-mdx-enhanced": "^5.0.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "remark-emoji": "^2.2.0",
+    "remark-images": "^2.0.0",
+    "styled-components": "^5.3.0"
+  },
+  "devDependencies": {
+    "@types/node": "^15.0.2",
+    "@types/react": "^17.0.5",
+    "typescript": "^4.2.4"
   }
 }
