--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
   "dependencies": {
     "@mdx-js/loader": "^1.6.22",
     "@next/mdx": "^10.2.0",
+    "gray-matter": "^4.0.3",
     "next": "10.2.0",
+    "next-compose-plugins": "^2.2.1",
     "next-mdx-enhanced": "^5.0.0",
+    "next-mdx-remote": "^3.0.1",
+    "normalize.css": "^8.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "remark-emoji": "^2.2.0",
