--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@mdx-js/loader": "^1.6.22",
     "@next/mdx": "^10.2.0",
+    "chokidar": "^3.5.1",
     "gray-matter": "^4.0.3",
     "next": "10.2.0",
     "next-compose-plugins": "^2.2.1",
@@ -24,6 +25,7 @@
     "normalize.css": "^8.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "reading-time": "^1.3.0",
     "remark-emoji": "^2.2.0",
     "remark-images": "^2.0.0",
     "styled-components": "^5.3.0"
