--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next-compose-plugins": "^2.2.1",
     "next-mdx-enhanced": "^5.0.0",
     "next-mdx-remote": "^3.0.1",
+    "nextjs-progressbar": "^0.0.9",
     "normalize.css": "^8.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
