--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,9 +21,7 @@
   "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx",
-    "pages/_app.js", 
-    "pages/index.js"
+    "**/*.tsx"
   ],
   "exclude": [
     "node_modules"
