--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@mdx-js/loader": "^1.6.22",
     "@next/mdx": "^10.2.0",
+    "autoprefixer": "^10.2.5",
     "chokidar": "^3.5.1",
     "gray-matter": "^4.0.3",
     "next": "10.2.0",
@@ -24,14 +25,18 @@
     "next-mdx-remote": "^3.0.1",
     "nextjs-progressbar": "^0.0.9",
     "normalize.css": "^8.0.1",
+    "postcss": "^8.2.15",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "reading-time": "^1.3.0",
     "remark-emoji": "^2.2.0",
     "remark-images": "^2.0.0",
-    "styled-components": "^5.3.0"
+    "sass": "^1.32.13",
+    "tailwindcss": "^2.1.2"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.3.2",
+    "@tailwindcss/jit": "^0.1.18",
     "@types/node": "^15.0.2",
     "@types/react": "^17.0.5",
     "typescript": "^4.2.4"
