--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "format": "prettier --write \"**/*.{js,jsx,json,md}\""
   },
   "dependencies": {
     "@mdx-js/loader": "^1.6.22",
@@ -39,6 +40,7 @@
     "@tailwindcss/jit": "^0.1.18",
     "@types/node": "^15.0.2",
     "@types/react": "^17.0.5",
+    "prettier": "^2.3.0",
     "typescript": "^4.2.4"
   }
 }
