--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "rimraf .next/cache && next dev",
     "build": "next build",
     "start": "next start",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\""
@@ -40,6 +40,7 @@
     "autoprefixer": "^10.2.5",
     "postcss": "^8.3.0",
     "prettier": "^2.3.0",
+    "rimraf": "^3.0.2",
     "tailwindcss": "^2.1.2",
     "typescript": "^4.2.4"
   }
