--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "dev": "rimraf .next/cache && next dev",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\""
@@ -41,6 +41,7 @@
     "postcss": "^8.3.0",
     "prettier": "^2.3.0",
     "rimraf": "^3.0.2",
+    "stylelint-config-recommended": "^5.0.0",
     "tailwindcss": "^2.1.2",
     "typescript": "^4.2.4"
   }
