--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "format": "prettier --write \"**/*.{js,jsx,json,md}\""
   },
   "dependencies": {
+    "@icon-park/react": "^1.3.3",
     "@mdx-js/loader": "^1.6.22",
     "@next/mdx": "^10.2.0",
     "chokidar": "^3.5.1",
