--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "normalize.css": "^8.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-tsparticles": "^1.27.0",
     "reading-time": "^1.3.0",
     "remark-emoji": "^2.2.0",
     "remark-images": "^2.0.0",
-    "sass": "^1.32.13"
+    "sass": "^1.32.13",
+    "tsparticles": "^1.27.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.3.2",
