--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mdx-js/loader": "^1.6.22",
     "@next/mdx": "^10.2.0",
     "chokidar": "^3.5.1",
+    "dayjs": "^1.10.5",
     "gray-matter": "^4.0.3",
     "next": "10.2.0",
     "next-compose-plugins": "^2.2.1",
