chore: 更新邮箱配置

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "description": "My finest Nuxt.js project",
   "author": {
     "name": "MoonCheung",
-    "email": "salvador23@163.com",
+    "email": "ikmoons.is@gmail.com",
     "url": "https://ikmoons.com"
   },
   "license": "MIT",
