--- a/servers/package.json
+++ b/servers/package.json
@@ -18,7 +18,7 @@
   ],
   "author": {
     "name": "MoonCheung",
-    "email": "salvador23@163.com",
+    "email": "ikmoons.is@gmail.com",
     "website": "https://ikmoons.com"
   },
   "license": "MIT",
