--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,7 @@
   "name": "elem-admin",
   "version": "1.1.0",
   "description": "A vue admin template with Element UI & axios & iconfont & permission control & lint",
-  "author": "MoonCheung <salvador23@163.com>",
+  "author": "MoonCheung <ikmoons.is@gmail.com>",
   "license": "MIT",
   "scripts": {
     "dev": "vue-cli-service serve",
