--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "@next/mdx": "^10.2.0",
     "chokidar": "^3.5.1",
     "dayjs": "^1.10.5",
+    "fast-glob": "^3.2.7",
     "gray-matter": "^4.0.3",
     "next": "10.2.0",
     "next-compose-plugins": "^2.2.1",
-    "next-mdx-enhanced": "^5.0.0",
-    "next-mdx-remote": "^3.0.1",
+    "next-mdx-remote": "^3.0.4",
     "nextjs-progressbar": "^0.0.9",
     "normalize.css": "^8.0.1",
     "react": "17.0.2",
