feat: 增加eslint+prettier配置

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "lint": "next lint",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\""
   },
   "dependencies": {
@@ -22,13 +23,13 @@
     "dayjs": "^1.10.5",
     "fast-glob": "^3.2.7",
     "gray-matter": "^4.0.3",
-    "next": "10.2.0",
+    "next": "^11.1.2",
     "next-compose-plugins": "^2.2.1",
     "next-mdx-remote": "^3.0.4",
-    "nextjs-progressbar": "^0.0.9",
+    "nextjs-progressbar": "^0.0.11",
     "normalize.css": "^8.0.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-tsparticles": "^1.27.0",
     "reading-time": "^1.3.0",
     "remark-emoji": "^2.2.0",
@@ -41,7 +42,20 @@
     "@tailwindcss/jit": "^0.1.18",
     "@types/node": "^15.0.2",
     "@types/react": "^17.0.5",
+    "@typescript-eslint/eslint-plugin": "^4.31.1",
+    "@typescript-eslint/parser": "^4.31.1",
     "autoprefixer": "^10.2.5",
+    "eslint": "^7.32.0",
+    "eslint-config-next": "11.1.2",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-react": "^7.25.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "postcss": "^8.3.0",
     "prettier": "^2.3.0",
     "rimraf": "^3.0.2",
