--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next": "^11.1.2",
     "next-compose-plugins": "^2.2.1",
     "next-mdx-remote": "^3.0.4",
+    "next-themes": "^0.0.15",
     "nextjs-progressbar": "^0.0.11",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
@@ -38,8 +39,10 @@
     "tsparticles": "^1.27.0"
   },
   "devDependencies": {
+    "@svgr/webpack": "^5.5.0",
     "@tailwindcss/forms": "^0.3.2",
     "@tailwindcss/jit": "^0.1.18",
+    "@tailwindcss/typography": "^0.4.1",
     "@types/node": "^15.0.2",
     "@types/react": "^17.0.5",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
