--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next": "^11.1.2",
     "next-compose-plugins": "^2.2.1",
     "next-mdx-remote": "^3.0.4",
+    "next-seo": "^4.28.1",
     "next-themes": "^0.0.15",
     "nextjs-progressbar": "^0.0.11",
     "normalize.css": "^8.0.1",
