--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@icon-park/react": "^1.3.3",
     "@mdx-js/loader": "^1.6.22",
     "@next/mdx": "^10.2.0",
+    "bezier-easing": "^2.1.0",
     "chokidar": "^3.5.1",
     "dayjs": "^1.10.5",
     "fast-glob": "^3.2.7",
