--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
+    "downlevelIteration": true, // 对迭代器支持
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"]
