--- a/serverless.yml
+++ b/serverless.yml
@@ -10,6 +10,7 @@ inputs:
       - '.next/cache/**'
       - "node_modules/**"
   region: ap-guangzhou
+  serviceId: ${env:APIGW_CUSTOM_SERVICE} # api网关服务ID
   layers:
     - name: ${output:${stage}:${app}:${name}_layer.name} # 层名称
       version: ${output:${stage}:${app}:${name}_layer.version} # 版本号
@@ -21,6 +22,11 @@ inputs:
   staticConf:  # 静态资源相关配置
     cosConf:
       bucket: ${env:BUCKET} # 这里创建的 COS 桶名称
+      sources:
+        - src: .next/static
+          targetDir: /_next/static
+        - src: public
+          targetDir: /
     cdnConf:
       area: global
       domain: ${env:CDN_DOMAIN}
@@ -29,12 +35,11 @@ inputs:
         http2: on
         certId: ${env:CDN_DOMAIN_CERTID}
   apigatewayConf:
-    # id: ${env:APIGW_CUSTOM_SERVICE}
     protocols:
       - http
       - https
     environment: release
-    cors: true #  允许跨域
+    enableCORS: true #  允许跨域
     customDomains:
       - domain: ${env:APIGW_CUSTOM_DOMAIN}
         certificateId: ${env:APIGW_CUSTOM_DOMAIN_CERTID}
