--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "chokidar": "^3.5.1",
     "dayjs": "^1.10.5",
     "fast-glob": "^3.2.7",
+    "github-markdown-css": "^4.0.0",
     "gray-matter": "^4.0.3",
     "next": "^11.1.2",
     "next-compose-plugins": "^2.2.1",
