--- a/package.json
+++ b/package.json
@@ -19,17 +19,17 @@
   },
   "dependencies": {
     "@icon-park/react": "^1.3.3",
-    "@mdx-js/loader": "^1.6.22",
-    "@next/mdx": "^10.2.0",
+    "@mdx-js/loader": "^2.0.0",
+    "@next/mdx": "^12.1.0",
     "bezier-easing": "^2.1.0",
     "chokidar": "^3.5.1",
     "dayjs": "^1.10.5",
     "fast-glob": "^3.2.7",
     "github-markdown-css": "^4.0.0",
     "gray-matter": "^4.0.3",
-    "next": "^11.1.2",
+    "next": "^12.1.0",
     "next-compose-plugins": "^2.2.1",
-    "next-mdx-remote": "^3.0.4",
+    "next-mdx-remote": "^4.0.0",
     "next-seo": "^4.28.1",
     "next-themes": "^0.0.15",
     "nextjs-progressbar": "^0.0.11",
@@ -66,6 +66,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "postcss": "^8.3.0",
     "prettier": "^2.3.0",
+    "process": "^0.11.10",
     "rimraf": "^3.0.2",
     "stylelint-config-recommended": "^5.0.0",
     "tailwindcss": "^2.2.7",
