--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "next-seo": "^4.28.1",
     "next-themes": "^0.0.15",
     "nextjs-progressbar": "^0.0.11",
+    "prism-react-renderer": "^1.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-tsparticles": "^1.35.1",
