chore: 增加node版本配置

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,14 +7,17 @@ on: #监听的事件和分支配置
       - main 
 jobs:
   deploy:
-    name: deploy serverless http
+    name: deploy serverless scf
     runs-on: ubuntu-latest
     strategy:
       matrix:
         node-version: [14.x]
     steps:
-      - name: clone local repository
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
       - name: install dependency
         run: npm install
       - name: build
