--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
     "deploy": "serverless deploy",
     "deploy:layer": "serverless deploy --target=./layer",
-    "format": "prettier --write \"**/*.{js,jsx,json,md}\""
+    "lint": "next lint",
+    "lint:js": "eslint --ext \".js,.jsx,.ts,.tsx\" --ignore-path .gitignore .",
+    "lint:prettier": "prettier --write \"**/*.{js,jsx,json,md}\"",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@icon-park/react": "^1.3.3",
@@ -64,11 +66,17 @@
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-react": "^7.25.1",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
     "postcss": "^8.4.12",
     "prettier": "^2.3.0",
     "rimraf": "^3.0.2",
     "stylelint-config-recommended": "^5.0.0",
     "tailwindcss": "^3.0.23",
     "typescript": "^4.2.4"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": "eslint --cache",
+    "*.**": "prettier --check --ignore-unknown"
   }
 }
