--- a/package.json
+++ b/package.json
@@ -75,8 +75,13 @@
     "tailwindcss": "^3.0.23",
     "typescript": "^4.2.4"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx}": "eslint --cache",
+    "*.{js,jsx,ts,tsx,yaml,yml}": "eslint --cache",
     "*.**": "prettier --check --ignore-unknown"
   }
 }
