--- a/package.json
+++ b/package.json
@@ -29,12 +29,13 @@
     "fast-glob": "^3.2.7",
     "github-markdown-css": "^4.0.0",
     "gray-matter": "^4.0.3",
-    "next": "^11.1.4",
+    "next": "12",
     "next-compose-plugins": "^2.2.1",
     "next-mdx-remote": "^3.0.8",
     "next-seo": "^4.28.1",
     "next-themes": "^0.0.15",
     "nextjs-progressbar": "^0.0.11",
+    "nextra": "^2.3.0",
     "prism-react-renderer": "^1.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
