--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "github-markdown-css": "^4.0.0",
     "gray-matter": "^4.0.3",
     "next": "12",
-    "next-compose-plugins": "^2.2.1",
     "next-mdx-remote": "^3.0.8",
     "next-seo": "^4.28.1",
     "next-themes": "^0.0.15",
@@ -39,12 +38,10 @@
     "prism-react-renderer": "^1.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-tsparticles": "^1.35.1",
     "reading-time": "^1.3.0",
     "remark-emoji": "^2.2.0",
     "remark-images": "^2.0.0",
-    "sass": "^1.32.13",
-    "tsparticles": "^1.27.0"
+    "sass": "^1.32.13"
   },
   "devDependencies": {
     "@svgr/webpack": "^5.5.0",
