chore: upgrade mdx2 config

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ikmoons_cloud",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "author": {
     "name": "MoonCheung",
     "email": "ikmoons.is@gmail.com",
@@ -21,38 +21,41 @@
   },
   "dependencies": {
     "@icon-park/react": "^1.3.3",
-    "@mdx-js/loader": "^1.6.22",
-    "@next/mdx": "^11.1.4",
+    "@mdx-js/loader": "^2.3.0",
+    "@mdx-js/react": "^2.3.0",
+    "@next/mdx": "^12.3.4",
     "bezier-easing": "^2.1.0",
     "chokidar": "^3.5.1",
     "dayjs": "^1.10.5",
     "fast-glob": "^3.2.7",
-    "github-markdown-css": "^4.0.0",
     "gray-matter": "^4.0.3",
-    "next": "12",
-    "next-mdx-remote": "^3.0.8",
+    "next": "^12.3.4",
+    "next-mdx-remote": "^4.4.1",
     "next-seo": "^4.28.1",
     "next-themes": "^0.0.15",
     "nextjs-progressbar": "^0.0.11",
-    "nextra": "^2.3.0",
-    "prism-react-renderer": "^1.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "reading-time": "^1.3.0",
+    "rehype-accessible-emojis": "^0.3.2",
+    "rehype-autolink-headings": "^6.1.1",
+    "rehype-pretty-code": "^0.9.4",
+    "rehype-slug": "^5.1.0",
     "remark-emoji": "^2.2.0",
+    "remark-gfm": "^3.0.1",
     "remark-images": "^2.0.0",
-    "sass": "^1.32.13"
+    "sass": "^1.32.13",
+    "shiki": "^0.14.1"
   },
   "devDependencies": {
     "@svgr/webpack": "^5.5.0",
     "@tailwindcss/forms": "^0.5.0",
-    "@tailwindcss/typography": "^0.5.2",
+    "@tailwindcss/typography": "^0.5.9",
     "@types/node": "^15.0.2",
     "@types/react": "^17.0.5",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "@typescript-eslint/parser": "^4.31.1",
     "autoprefixer": "^10.4.4",
-    "babel-plugin-transform-remove-console": "^6.9.4",
     "eslint": "^7.32.0",
     "eslint-config-next": "11.1.2",
     "eslint-config-prettier": "^8.3.0",
